--- a/.github/workflows/Lab_3_deployment_environnment.yaml
+++ b/.github/workflows/Lab_3_deployment_environnment.yaml
@@ -4,17 +4,17 @@ on:
   workflow_dispatch:
 
 env:
-  RESOURCE_GROUP: "RG-Lab3"
+  RESOURCE_GROUP: "RG-PHE-Lab3"
   LOCATION: "eastus2"
-  CONTAINERAPPS_ENVIRONMENT: "environment-lab-3"
-  LOG_ANALYTICS_NAME: "pierrc-workspace-lab-3"
-  ACR_NAME: "acrlab3xxx"
+  CONTAINERAPPS_ENVIRONMENT: "environment-phe-lab-3"
+  LOG_ANALYTICS_NAME: "pherrier-workspace-lab-3"
+  ACR_NAME: "acrlab3phe"
   ##################################################################################################################################################################################
   # Nous sommes dans un Workshop !                                                                                                                                                 #
   # Dans les bonnes pratiques, toutes la informations liées à la base de données sont à mettre dans un service pour stocker les secrets (ex: service secrets GitHub, KeyVault, ...)#
-  DB_HOST_NAME: "DB-lab-3-xxx"                                                                                                                                                     #
+  DB_HOST_NAME: "DB-lab-3-phe"                                                                                                                                                     #
   DB_NAME: "rugby_api" # ne pas modifier                                                                                                                                           #
-  DB_ADMIN: "pierrc"                                                                                                                                                               #
+  DB_ADMIN: "pherrier"                                                                                                                                                               #
   DB_ADMIN_PASSWORD: Password123$                                                                                                                                                  #
   ##################################################################################################################################################################################
 
